# psynapse

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  start-frontend.sh
.github/workflows/: run-tests.yml
assets/: litellm-chat-completion.json  openrouter-image-prompt.json  openrouter-stream.json  z-image.json
assets/workflows/: litelllm-vision-response.json  openai-llm-response.json  openai-structured-output.json  openai-vision-response.json
backend/executor/: index.html
backend/schema_extractor/: index.html
docker/: Dockerfile.backend  Dockerfile.backend-torch-gpu  Dockerfile.frontend  docker-compose-torch-gpu.yml  docker-compose.yml
docs/: error.md  index.md
docs/assets/: openrouter-chat-completion.json
docs/backend/: executor.md  schema_extractor.md
docs/examples/: llm.md
docs/frontend/: components.md  hooks.md  types.md  utils.md
docs/guides/: annotated-dicts.md  architecture.md  progress-nodes.md  quick-start.md  stream-nodes.md
docs/implementation-details/: architecture.md  backend.md
docs/sample-workflows/: litellm-workflows.md  openai-llm-response.md  openai-vision-response.md  openai-workflows.md
examples/: error_handling_demo.py
examples/llm/: index.html
frontend/: package-lock.json  package.json
frontend/components/: index.html
frontend/hooks/: index.html
javascripts/: mermaid-init.js
nodepacks/: basic.py
psynapse/: __init__.py  __main__.py  edge.py  editor.py  node.py  nodes.py  scene.py  socket.py  utils.py  view.py
psynapse-web/: package-lock.json  package.json  start-dev.sh
psynapse_backend/: executor.py  main.py  schema_extractor.py  stateful_op_utils.py  test_backend.py  utils.py
search/: search_index.json
tests/: test_backend.py  test_env_vars.py  test_executor_topological.py  test_settings_save_and_load.py  test_settings_to_execution.py
(+76 files in other folders)
