[project]
name = "psynapse"
dynamic = ["version"]
description = "A node-based UI editor using PySide6 with FastAPI backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.1",
    "fastapi[all]>=0.120.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pyside6>=6.10.0",
    "requests>=2.31.0",
    "rich>=14.2.0",
    "sse-starlette>=2.1.3",
    "typer>=0.20.0",
]

[project.scripts]
psynapse = "psynapse.__main__:psynapse_cli"
psynapse-backend = "psynapse.__main__:psynapse_backend_cli"

[project.optional-dependencies]
llm = [
    "litellm>=1.79.1",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "uv>=0.4.20",
    "pytest>=8.3.3",
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
    "pytest-anyio>=0.0.0",
    "trio>=0.31.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "jupyter>=1.1.1",
]
build = [
    "twine>=5.1.1",
    "wheel>=0.40",
    "build>=0.10"
]
backend = [
    "aiohttp>=3.13.1",
    "fastapi[all]>=0.120.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["psynapse"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["psynapse"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
